# asar-python

./: README.md  main.py  pyproject.toml  test_asar.py  test_cli.py
asar/: __init__.py  archive.py  asar_py.py  cli.py  listing.py
pyasar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_patch.py
